po: update po/nl_NL/contribute.po (pulled from Transifex.net by CiviCRM l10n maintainer)

--- a/po/nl_NL/contribute.po
+++ b/po/nl_NL/contribute.po
@@ -20,7 +20,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2016-05-09 13:33-0400\n"
-"PO-Revision-Date: 2016-06-15 14:03+0000\n"
+"PO-Revision-Date: 2016-06-23 19:24+0000\n"
 "Last-Translator: HanV <han.velthuis@home.nl>\n"
 "Language-Team: Dutch (http://www.transifex.com/civicrm/civicrm/language/nl/)\n"
 "MIME-Version: 1.0\n"
@@ -198,7 +198,7 @@ msgstr "Is het een testbijdrage?"
 
 #: CRM/Contribute/BAO/Query.php
 msgid "Personal Campaign Page Honor Roll?"
-msgstr "Persoonlijke Campagne Pagina Eerrol?"
+msgstr "Persoonlijke campagnepagina eerrol?"
 
 #: CRM/Contribute/BAO/Query.php
 msgid "Soft Credits with related Hard Credit"
@@ -414,7 +414,7 @@ msgstr "Bijdragepagina valuta"
 
 #: CRM/Contribute/DAO/ContributionPage.php
 msgid "Contribution Page Campaign ID"
-msgstr "Bijdragepagina Campagne ID"
+msgstr "Bijdragepagina campagne-ID"
 
 #: CRM/Contribute/DAO/ContributionPage.php
 msgid "Is Contribution Page Shared?"
@@ -848,7 +848,7 @@ msgstr "Beëindigen periodieke bijdrage is mislukt."
 
 #: CRM/Contribute/Form/CancelSubscription.php
 msgid "The recurring contribution could not be cancelled."
-msgstr "De periodieke bijdrage kon niet worden beëindigt."
+msgstr "Het beëindigen van de periodieke bijdrage is mislukt."
 
 #: CRM/Contribute/Form/Contribution/Confirm.php
 msgid "Make Contribution"
@@ -2029,7 +2029,7 @@ msgstr "Bedrag periodieke bijdrage"
 
 #: CRM/Contribute/Form/UpdateSubscription.php
 msgid "Could not update the Recurring contribution details"
-msgstr "De gegevens van de periodieke bijdrage konden niet gewijzigd worden"
+msgstr "Het wijzigen van de gegevens van de periodieke bijdrage is mislukt."
 
 #: CRM/Contribute/Form/UpdateSubscription.php
 msgid ""
@@ -4176,7 +4176,7 @@ msgid ""
 "records. If possible, include a unique 'External ID' for each new contact "
 "which you can then use to match contributions to contributors. Then return "
 "to this screen and import the contribution records."
-msgstr "Om bijdragen te kunnen importeren dienen de contribuanten al als contact bekend te zijn in CiviCRM. Als u bijdragen wilt importeren van onbekende contacten, dan moet dit in 2 stappen gebeuren.<br /> Gebruik eerst <strong>Importeer contacten</strong> om de contacten toe te voegen. Voeg, indien mogelijk, een uniek 'extern nummer' voor elk nieuw contact toe. Dit veld kunt u dan gebruiken om de bijdragen te koppelen aan de contribuanten. Keer dan terug naar dit scherm en importeer de bijdragen."
+msgstr "Om bijdragen te kunnen importeren dienen de contribuanten al als contact bekend te zijn in CiviCRM. Als u bijdragen wilt importeren van onbekende contacten, dan moet dit in 2 stappen gebeuren.<br /> Gebruik eerst <strong>Importeer contacten</strong> om de contacten toe te voegen. Voeg, indien mogelijk, een uniek 'externe-ID' voor elk nieuw contact toe. Dit veld kunt u dan gebruiken om de bijdragen te koppelen aan de contribuanten. Keer dan terug naar dit scherm en importeer de bijdragen."
 
 #: templates/CRM/Contribute/Import/Form/DataSource.hlp
 msgid "Matching Contributions to Contributors"
@@ -4195,7 +4195,7 @@ msgid ""
 "contact in CiviCRM, you can include that value as a column in your import "
 "file. Contributions will then be matched to contributors using their "
 "External ID."
-msgstr "Als u een unieke <strong>extern nummer</strong> heeft voor elk contact in CiviCRM, dan kunt u deze waarde meenemen in uw invoerbestand. Bijdragen worden dan hiermee gekoppeld met contacten."
+msgstr "Als u een unieke <strong>externe-ID</strong> heeft voor elk contact in CiviCRM, dan kunt u deze waarde meenemen in uw invoerbestand. Bijdragen worden dan hiermee gekoppeld met contacten."
 
 #: templates/CRM/Contribute/Import/Form/DataSource.hlp
 msgid ""
@@ -4226,7 +4226,7 @@ msgid ""
 "Identifier' (if you are using those in your contact records), OR the "
 "property defined in your Unsupervised Duplicate Matching rule (which is "
 "Email Address by default)."
-msgstr "Bij het OPVOEREN van nieuwe bijdragen moet er een kolom zijn in uw invoerbestand dat aangeeft van welk bestaand contact het een bijdrage is. U kunt het 'Intern contactnummer', een 'Extern nummer' of het/de veld(en) in de 'zonder toezicht' overeenkomstregel (standaard het e-mailadres) gebruiken."
+msgstr "Bij het OPVOEREN van nieuwe bijdragen moet er een kolom zijn in uw invoerbestand dat aangeeft van welk bestaand contact het een bijdrage is. U kunt het 'Intern contactnummer', een 'Externe-ID' of het/de veld(en) in de 'zonder toezicht' overeenkomstregel (standaard het e-mailadres) gebruiken."
 
 #: templates/CRM/Contribute/Import/Form/DataSource.hlp
 msgid ""
@@ -4348,7 +4348,7 @@ msgid ""
 "Rows marked as pledge payments where the contributor and / or contribution "
 "amount could not be matched to a pending pledge payment. These contribution "
 "rows have been skipped (not imported)."
-msgstr "Regels gemarkeerd als toegezegde betaling waarbij de betaler en/of het bedrag niet gematcht kon worden met een toezegging. Deze regels met bijdragen zijn overgeslagen (niet geïmporteerd)."
+msgstr "Regels gemarkeerd als toegezegde betaling waarbij de betaler en/of het bedrag niet gematcht kan worden met een toezegging. Deze regels met bijdragen zijn overgeslagen (niet geïmporteerd)."
 
 #: templates/CRM/Contribute/Import/Form/Summary.tpl
 msgid "Rows with mismatched contribution IDs... (NOT updated)."
@@ -5131,8 +5131,8 @@ msgstr "De veldtypes bestand en automatisch-aanvullen-selecteren in het geselect
 #: CRM/Contribute/Form/Task/Delete.php
 msgid "1 contribution could not be deleted."
 msgid_plural "%count contributions could not be deleted."
-msgstr[0] "1 bijdrage kon niet worden verwijderd."
-msgstr[1] "%count bijdragen konden niet worden verwijderd."
+msgstr[0] "Het verwijderen van 1 bijdrage is mislukt."
+msgstr[1] "Het verwijderen van %count bijdragen is mislukt."
 
 #: CRM/Contribute/Form/Task/Delete.php
 msgid "1 contribution will not be deleted."
