po: update po/nl_NL/common-base.po (pulled from Transifex.net by CiviCRM l10n maintainer)

--- a/po/nl_NL/common-base.po
+++ b/po/nl_NL/common-base.po
@@ -22,7 +22,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2016-05-09 13:33-0400\n"
-"PO-Revision-Date: 2016-06-14 17:33+0000\n"
+"PO-Revision-Date: 2016-06-23 19:07+0000\n"
 "Last-Translator: HanV <han.velthuis@home.nl>\n"
 "Language-Team: Dutch (http://www.transifex.com/civicrm/civicrm/language/nl/)\n"
 "MIME-Version: 1.0\n"
@@ -1842,7 +1842,7 @@ msgstr "Het contactsubtype komt niet overeen met het contacttype van dit record"
 
 #: CRM/Contact/BAO/Contact.php
 msgid "Image could not be uploaded due to invalid type extension."
-msgstr "De foto kon niet geüpload worden vanwege een ongeldig bestandsformaat"
+msgstr "De foto kan niet worden geüpload vanwege een ongeldig bestandsformaat"
 
 #: CRM/Contact/BAO/Contact.php
 msgid "Contact image deleted successfully"
@@ -4430,7 +4430,7 @@ msgstr "Contact(en) bijwerken"
 
 #: CRM/Contact/Form/Task/Batch.php
 msgid "Duplicate value for External ID."
-msgstr "Kopieer waarde voor Extern nummer."
+msgstr "Kopieer waarde voor Externe-ID."
 
 #: CRM/Contact/Form/Task/Batch.php
 msgid "Contact Subtype field of 1 contact has not been updated."
@@ -5129,7 +5129,7 @@ msgstr "Ongeldig e-mailadres"
 
 #: CRM/Contact/Import/Parser/Contact.php
 msgid "External ID conflicts with record %1"
-msgstr "Extern nummer geeft een probleem met record %1"
+msgstr "Probleem met Externe-ID bij record %1"
 
 #: CRM/Contact/Import/Parser/Contact.php
 msgid "Mismatched or Invalid contact subtype found for this related contact."
@@ -6243,7 +6243,7 @@ msgid ""
 "href=\"%1\">Administer CiviCRM &raquo; Communications &raquo; FROM Email "
 "Addresses</a>. The email address used may need to be a valid mail account "
 "with your email service provider."
-msgstr "De beheerder moet  een geldig 'VAN E-mailadres' invoeren  <a href=\"%1\">Beheer CiviCRM &raquo; Communicatie &raquo; VAN E-mailadres</a>. Het e-mailadres moet geldig zijn bij uw e-mailprovider."
+msgstr "De beheerder moet  een geldig 'VAN E-mailadres' invoeren  <a href=\"%1\">Beheer &raquo; Communicatie &raquo; VAN E-mailadres</a>. Het e-mailadres moet geldig zijn bij uw e-mailprovider."
 
 #: CRM/Core/BAO/UFGroup.php
 msgid "Ext."
@@ -8643,13 +8643,13 @@ msgstr "Google Checkout"
 msgid ""
 "User Name is not set in the Administer CiviCRM &raquo; System Settings "
 "&raquo; Payment Processors."
-msgstr "Gebruikersnaam ontbreekt in Beheer CiviCRM &raquo; Systeeminstellingen &raquo; Betaalmethode"
+msgstr "Gebruikersnaam ontbreekt in Beheer &raquo; Systeeminstellingen &raquo; Betaalmethode"
 
 #: CRM/Core/Payment/Google.php CRM/Core/Payment/Moneris.php
 msgid ""
 "Password is not set in the Administer CiviCRM &raquo; System Settings "
 "&raquo; Payment Processors."
-msgstr "Wachtwoord ontbreekt in Beheer CiviCRM &raquo; Systeeminstellingen &raquo; Betaalmethode"
+msgstr "Wachtwoord ontbreekt in Beheer &raquo; Systeeminstellingen &raquo; Betaalmethode"
 
 #: CRM/Core/Payment/Google.php
 msgid "Invalid response code received from Google Checkout: %1"
@@ -8669,7 +8669,7 @@ msgstr "Download de Moneris mpgClasses.php file en plaats deze in de packages/Se
 msgid ""
 "Store ID is not set in the Administer CiviCRM &raquo; System Settings "
 "&raquo; Payment Processors."
-msgstr "Store ID is niet ingesteld in Beheer CiviCRM &raquo; Systeeminstellingen &raquo; Betaalmethode."
+msgstr "Store ID is niet ingesteld in Beheer &raquo; Systeeminstellingen &raquo; Betaalmethode."
 
 #: CRM/Core/Payment/PayJunction.php xml/templates/civicrm_data.tpl
 msgid "PayJunction"
@@ -11319,7 +11319,7 @@ msgstr "Maximumwaarde"
 
 #: CRM/Price/DAO/PriceFieldValue.php
 msgid "Membership Num Terms"
-msgstr "Lidmaatschap aantal termen"
+msgstr "Lidmaatschap aantal termijnen"
 
 #: CRM/Price/DAO/PriceFieldValue.php
 msgid "Is Default Price Field Option?"
@@ -12760,7 +12760,7 @@ msgid ""
 "(Administer CiviCRM &raquo; System Settings &raquo; Outbound Email), OR the "
 "FROM email address specifically configured for your contribution page or "
 "event. Possible causes are:"
-msgstr "Dit is waarschijnlijk een gevolg van een probleem in uw uitgaande e-mail instellingen (Beheer CiviCRM &raquo; Systeeminstellingen &raquo; Uitgaande e-mail), OF het VAN e-mailadres van uw bijdragepagina of evenement. Mogelijke oorzaken zijn:"
+msgstr "Dit is waarschijnlijk een gevolg van een probleem in uw uitgaande e-mail instellingen (Beheer &raquo; Systeeminstellingen &raquo; Uitgaande e-mail), OF het VAN e-mailadres van uw bijdragepagina of evenement. Mogelijke oorzaken zijn:"
 
 #: CRM/Utils/Mail.php
 msgid "Your SMTP Username or Password are incorrect."
@@ -13725,7 +13725,7 @@ msgstr "Er zijn geen rolbevoegdheden. U kunt nu een <a href='%1'>toevoegen</a>."
 
 #: templates/CRM/Activity/Form/Activity.hlp
 msgid "Create Separate Activity Records?"
-msgstr "Gescheiden activiteitsrecords aanmaken?"
+msgstr "Losstaande activiteitsrecords aanmaken?"
 
 #: templates/CRM/Activity/Form/Activity.hlp
 msgid ""
@@ -13988,7 +13988,7 @@ msgid ""
 "application has assigned a unique ID to each contact, you can import that "
 "value into CiviCRM's External ID field. Then you can use that unique key as "
 "the 'match to contact' value when importing related data such as Activities."
-msgstr "CiviCRM geeft u de mogelijkheid om aan te geven bij welk contact elk activiteitsrecord behoort, door gebruik te maken van het unieke Contact ID, een unieke externe sleutel die u toekent, OF door een door u ingestelde 'zonder toezicht' overeenkomstregel  (standaard: e-mailadres). U moet minstens een van deze waarden hebben als kolom in uw invoerbestand. Indien u contacten uit een andere applicatie overneemt (of op elkaar afstemt), en die applicatie heeft een sleutel voor elk contact, neem dan dat veld over als CiviCRM's Extern nummer. U kunt dan dit veld gebruiken in de overeenkomstregel als u bijvoorbeeld activiteiten gaat importeren."
+msgstr "CiviCRM geeft u de mogelijkheid om aan te geven bij welk contact elk activiteitsrecord behoort, door gebruik te maken van het unieke Contact ID, een unieke externe-ID die u toekent, OF door een door u ingestelde 'zonder toezicht' overeenkomstregel  (standaard: e-mailadres). U moet minstens een van deze waarden hebben als kolom in uw invoerbestand. Indien u contacten uit een andere applicatie overneemt (of op elkaar afstemt), en die applicatie heeft een sleutel voor elk contact, neem dan dat veld over als CiviCRM's Externe-ID. U kunt dan dit veld gebruiken in de overeenkomstregel als u bijvoorbeeld activiteiten gaat importeren."
 
 #: templates/CRM/Activity/Import/Form/DataSource.tpl
 msgid ""
@@ -15344,7 +15344,7 @@ msgid ""
 " CiviEvent or CiviMember - you can also search based on information stored "
 "by these components. For example - you can find all contacts who live in a "
 "specific city AND have contributed at least %1 within the past 6 months."
-msgstr "Gebruik <strong>Geavanceerd Zoeken</strong> om te zoeken op adres, demografie, aangepaste velden, aantekeningen en/of relaties. Bij gebruik van CiviContribute, CiviEvent of CiviMember, kunt u ook zoeken op informatie van deze componenten. Bijvoorbeeld: U kunt zoeken naar alle contacten in een bepaalde plaats EN met een bijdrage van minstens %1 in het laatste half jaar."
+msgstr "Gebruik <strong>Geavanceerd Zoeken</strong> om te zoeken op adres, demografie, aangepaste velden, notities en/of relaties. Bij gebruik van CiviContribute, CiviEvent of CiviMember, kunt u ook zoeken op informatie van deze componenten. Bijvoorbeeld: U kunt zoeken naar alle contacten in een bepaalde plaats EN met een bijdrage van minstens %1 in het laatste half jaar."
 
 #: templates/CRM/Contact/Form/Search/Basic.hlp
 msgid "Group Search"
@@ -15896,7 +15896,7 @@ msgid ""
 "Go to <a href='%1'>Administer CiviCRM &raquo; Communications &raquo; FROM "
 "Email Addresses</a> to add or edit general email addresses. Make sure these "
 "email addresses are valid email accounts with your email service provider."
-msgstr "Ga naar <a href='%1'>Beheer CiviCRM &raquo; Communicatie &raquo; VAN e-mailadres</a> om algemene e-mailadressen toe te voegen of te wijzigen. Zorg ervoor dat dit voor uw e-mail provider geldige e-mailadressen zijn."
+msgstr "Ga naar <a href='%1'>Beheer &raquo; Communicatie &raquo; VAN e-mailadres</a> om algemene e-mailadressen toe te voegen of te wijzigen. Zorg ervoor dat dit voor uw e-mail provider geldige e-mailadressen zijn."
 
 #: templates/CRM/Contact/Form/Task/Email.hlp
 msgid "Subject Tokens"
@@ -16077,7 +16077,7 @@ msgid ""
 "Go to <strong><a href=\"%1\">Administer CiviCRM &raquo; Communications "
 "&raquo; Label Formats</a></strong> to add or edit labels or set the default "
 "label format."
-msgstr "Ga naar <a href='%1'>Beheer CiviCRM &raquo; Communicatie &raquo; Labelformaten</a> om formaten van labels toe te voegen of te wijzigen, of het standaard formaat te gebruiken."
+msgstr "Ga naar <a href='%1'>Beheer &raquo; Communicatie &raquo; Labelformaten</a> om formaten van labels toe te voegen of te wijzigen, of het standaard formaat te gebruiken."
 
 #: templates/CRM/Contact/Form/Task/Map/Google.tpl
 msgid "Get Directions FROM:"
@@ -16098,7 +16098,7 @@ msgid ""
 "Go to <strong><a href=\"%1\">Administer CiviCRM &raquo; Communications "
 "&raquo; Print Page (PDF) Formats</a></strong> to add or edit formats or set "
 "the default format."
-msgstr "Ga naar <a href='%1'>Beheer CiviCRM &raquo; Communicatie &raquo; PDF Formaat</a> om formaten van PDF toe te voegen of te wijzigen, of het standaard formaat te gebruiken."
+msgstr "Ga naar <a href='%1'>Beheer &raquo; Communicatie &raquo; PDF Formaat</a> om formaten van PDF toe te voegen (of te wijzigen), of het standaardformaat in te stellen."
 
 #: templates/CRM/Contact/Form/Task/PDFLetterCommon.hlp
 msgid ""
@@ -16137,7 +16137,7 @@ msgid ""
 "Go to <a href='%1'>Administer CiviCRM &raquo; System Settings &raquo; SMS "
 "Providers</a> to add or edit the provider. Make sure these Providers are "
 "valid."
-msgstr "Ga naar <a href='%1'>Beheer CiviCRM &raquo; Systeeminstellingen &raquo; SMS Providers</a> om SMS providers toe te voegen of te wijzigen. Zorg ervoor dat dit geldige providers zijn."
+msgstr "Ga naar <a href='%1'>Beheer &raquo; Systeeminstellingen &raquo; SMS-Providers</a> om SMS-providers toe te voegen of te wijzigen. Zorg ervoor dat dit geldige providers zijn."
 
 #: templates/CRM/Contact/Form/Task/SMS.hlp
 msgid ""
@@ -16275,7 +16275,7 @@ msgid ""
 "CiviCRM Components. Enable CiviContribute, CiviMember, and/or CiviEvent. "
 "Then navigate to the Import option found in each component's menu (e.g. "
 "CiviContribute &raquo; Import Contributions)."
-msgstr "Na het importeren van contacten, wilt u mogelijk ook <strong>bijdragen, lidmaatschappen en/of deelnames</strong> importeren van deze contacten. Controleer dan eerst of de bijbehorende CiviCRM component ingeschakeld is op  Beheer CiviCRM &raquo; Algemene Instellingen &raquo; Componenten inschakelen. Schakel CiviContribute, CiviMember en/of CiviEvent in. Ga dan naar de importoptie in het menu van het component. (bijv. CiviContribute &raquo; Bijdragen importeren)."
+msgstr "Na het importeren van contacten, wilt u mogelijk ook <strong>bijdragen, lidmaatschappen en/of deelnames</strong> importeren van deze contacten. Controleer dan eerst of de bijbehorende CiviCRM component ingeschakeld is op  Beheer &raquo; Algemene Instellingen &raquo; Componenten inschakelen. Schakel CiviContribute, CiviMember en/of CiviEvent in. Ga dan naar de importoptie in het menu van het component. (bijv. CiviContribute &raquo; Bijdragen importeren)."
 
 #: templates/CRM/Contact/Import/Form/DataSource.hlp
 msgid ""
@@ -19383,7 +19383,7 @@ msgstr "Kies de SMS-provider voor deze massa-SMS uit de lijst."
 msgid ""
 "Go to <a href='%1'>Administer CiviCRM &raquo; System Settings &raquo; SMS "
 "Providers</a> to add or edit SMS Provider."
-msgstr "Ga naar <a href='%1'>Beheer CiviCRM &raquo; Systeeminstellingen &raquo; SMS Providers</a> om SMS providers toe te voegen of te wijzigen.."
+msgstr "Ga naar <a href='%1'>Beheer &raquo; Systeeminstellingen &raquo; SMS Providers</a> om SMS providers toe te voegen of te wijzigen.."
 
 #: templates/CRM/SMS/Form/Upload.hlp
 msgid ""
@@ -24199,7 +24199,7 @@ msgstr "Uw database is niet geconfigureerd voor versie %1"
 
 #: CRM/Upgrade/Form.php
 msgid "Failed to find or create queueing table"
-msgstr "Queueing tabel is niet gevonden of kon niet worden aangemaakt."
+msgstr "Queueing tabel is niet gevonden of kan niet worden aangemaakt."
 
 #: CRM/Upgrade/Headless.php CRM/Upgrade/Page/Upgrade.php
 msgid "CiviCRM Upgrade Tasks"
@@ -24430,7 +24430,7 @@ msgid ""
 "work, and will need to be re-configured (this includes sending CiviMail "
 "mailings, updating membership statuses, etc.).</strong> Refer to the <a "
 "href=\"%1\">online documentation</a> for detailed instructions."
-msgstr "Let op! CiviCRM 4.1 heeft een verbeterde manier van omgaan met cronjobs. Maar de nieuwe methode is NIET compatibel met oudere versies. <strong>Informeer uw systeem beheerder dat alle cronjobs met een relatie naar CiviCRM niet meer zullen werken en opnieuw ingesteld moeten worden (inclusief de verzending van mailings vanuit CiviMail, bijgewerkte lidmaatschap statussen, etc.)</strong>. Bekijk de <a href=\"%1\">online documentatie</a> voor gedetailleerde instructies."
+msgstr "Let op! CiviCRM 4.1 heeft een verbeterde manier van omgaan met cronjobs. Maar de nieuwe methode is NIET compatibel met oudere versies. <strong>Informeer uw systeembeheerder dat alle cronjobs met een relatie naar CiviCRM niet meer zullen werken en opnieuw ingesteld moeten worden (inclusief de verzending van mailings vanuit CiviMail, bijgewerkte lidmaatschap statussen, enz.)</strong>. Bekijk de <a href=\"%1\">online documentatie</a> voor gedetailleerde instructies."
 
 #: CRM/Upgrade/Incremental/php/FourOne.php
 msgid ""
@@ -25124,7 +25124,7 @@ msgstr "Betaalmethode"
 msgid ""
 "Failed to make directory (%1) at \"%2\". Please update the settings or file "
 "permissions."
-msgstr "Map (%1) kon niet worden aangemaakt in \"%2\". Pas uw instellingen of de bestandsrechten aan."
+msgstr "Map (%1) kan niet worden aangemaakt in \"%2\". Pas uw instellingen of de bestandsrechten aan."
 
 #: CRM/Core/Controller.php
 msgid ""
