--- a/po/nl_NL/admin.po
+++ b/po/nl_NL/admin.po
@@ -13,7 +13,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2016-05-09 13:33-0400\n"
-"PO-Revision-Date: 2016-06-14 17:39+0000\n"
+"PO-Revision-Date: 2016-06-23 19:10+0000\n"
 "Last-Translator: HanV <han.velthuis@home.nl>\n"
 "Language-Team: Dutch (http://www.transifex.com/civicrm/civicrm/language/nl/)\n"
 "MIME-Version: 1.0\n"
@@ -4014,7 +4014,7 @@ msgid ""
 "\"Disable Outbound Email\". NOTE: If you disable outbound email, and you are"
 " using Online Contribution pages or online Event Registration - you will "
 "need to disable automated receipts and registration confirmations."
-msgstr "Als u niet wilt dat gebruikers uitgaande e-mail kunnen verzenden vanuit CiviCRM, kies dan \"Uitgaande e-mail uitschakelen\". OPMERKING: Als u uitgaande e-mail uitschakelt en u maakt gebruik van online bijdragepagina's of online aanmelden voor evenementen, dan zult u de automatische ontvangst- en registratiebevestigingen moeten uitschakelen."
+msgstr "Als u niet wilt dat gebruikers uitgaande e-mail kunnen verzenden in CiviCRM, kies dan \"Uitgaande e-mail uitschakelen\". OPMERKING: Als u uitgaande e-mail uitschakelt en u maakt gebruik van online bijdragepagina's of online aanmelden voor evenementen, dan zult u de automatische ontvangst- en registratiebevestigingen moeten uitschakelen."
 
 #: templates/CRM/Admin/Form/Setting/Smtp.tpl
 msgid ""
