--- a/po/nl_NL/campaign.po
+++ b/po/nl_NL/campaign.po
@@ -14,7 +14,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2016-05-09 13:33-0400\n"
-"PO-Revision-Date: 2016-05-31 19:07+0000\n"
+"PO-Revision-Date: 2016-06-23 18:48+0000\n"
 "Last-Translator: HanV <han.velthuis@home.nl>\n"
 "Language-Team: Dutch (http://www.transifex.com/civicrm/civicrm/language/nl/)\n"
 "MIME-Version: 1.0\n"
@@ -57,7 +57,7 @@ msgstr "Interviewer"
 
 #: CRM/Campaign/BAO/Query.php
 msgid "Could not find survey for %1 respondents."
-msgstr "Kon enquête voor %1 respondenten niet vinden."
+msgstr "De enquête is voor %1 respondenten niet gevonden."
 
 #: CRM/Campaign/BAO/Query.php
 msgid "Campaigns %1"
@@ -95,7 +95,7 @@ msgstr "Einddatum campagne"
 
 #: CRM/Campaign/DAO/Campaign.php
 msgid "Campaign External ID"
-msgstr "Campagne Externe ID"
+msgstr "Campagne Externe-ID"
 
 #: CRM/Campaign/DAO/Campaign.php
 msgid "Parent Campaign"
@@ -432,7 +432,7 @@ msgstr "Enquêtetype '%1' is opgeslagen."
 
 #: CRM/Campaign/Form/Task/Interview.php
 msgid "Could not find Interviewer."
-msgstr "Kon vragensteller niet vinden."
+msgstr "De interviewer is niet gevonden."
 
 #: CRM/Campaign/Form/Task/Interview.php
 msgid "No respondents are currently reserved for you to interview."
@@ -472,11 +472,11 @@ msgstr "Ontbrekend contactmoment vragensteller"
 
 #: CRM/Campaign/Form/Task/Release.php
 msgid "Could not find respondents to release."
-msgstr "Kon geen respondenten vinden om vrij te geven."
+msgstr "Er zijn geen respondenten om vrij te geven."
 
 #: CRM/Campaign/Form/Task/Release.php
 msgid "We could not found respondent for this survey to release."
-msgstr "We konden geen respondent vinden om voor deze enquête vrij te geven."
+msgstr "We hebben geen respondent bij deze enquête gevonden om vrij te geven."
 
 #: CRM/Campaign/Form/Task/Release.php
 msgid "Respondent has been released."
@@ -496,11 +496,11 @@ msgstr[1] "%count respondenten niet vrijgegeven."
 
 #: CRM/Campaign/Form/Task/Reserve.php
 msgid "Could not find Survey Id."
-msgstr "Kon enquêtenummer niet vinden."
+msgstr "Het enquête-ID is niet gevonden."
 
 #: CRM/Campaign/Form/Task/Reserve.php
 msgid "Could not find contacts for reservation."
-msgstr "Kon contacten voor reservering niet vinden."
+msgstr "De contacten voor de reservering zijn niet gevonden."
 
 #: CRM/Campaign/Form/Task/Reserve.php
 msgid ""
@@ -796,7 +796,7 @@ msgstr "Deze titel zal getoond worden bovenaan de bedankpagina."
 msgid ""
 "Enter text (and optional HTML layout tags) for the thank-you message that "
 "will appear at the top of the thank-you page."
-msgstr "Voeg tekst (en optionele HTML lay-out code) in voor de bedankt boodschap die bovenaan de bedankpagina zal verschijnen."
+msgstr "Voeg de tekst (eventueel met HTML) in voor de tekst die bovenaan de bedankpagina komt te staan."
 
 #: templates/CRM/Campaign/Form/Petition.tpl
 msgid "Disable the email confirmation for unverified contacts?"
