po: update po/nl_NL/report.po (pulled from Transifex.net by CiviCRM l10n maintainer)

--- a/po/nl_NL/report.po
+++ b/po/nl_NL/report.po
@@ -15,8 +15,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2016-05-09 13:33-0400\n"
-"PO-Revision-Date: 2016-06-21 19:16+0000\n"
-"Last-Translator: Kevin Levie <kevin@levity.nl>\n"
+"PO-Revision-Date: 2016-06-23 18:25+0000\n"
+"Last-Translator: HanV <han.velthuis@home.nl>\n"
 "Language-Team: Dutch (http://www.transifex.com/civicrm/civicrm/language/nl/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -1632,7 +1632,7 @@ msgstr "Rapport is verzonden per e-mail."
 
 #: CRM/Report/Form.php
 msgid "Report mail could not be sent."
-msgstr "Rapport kon niet per e-mail worden verzonden."
+msgstr "Het e-mailen van het rapport is mislukt."
 
 #: CRM/Report/Form.php
 msgid "Mail Error"
@@ -1754,7 +1754,7 @@ msgstr "%1 - Sjabloon"
 msgid ""
 "Could not find the report template. Make sure the report template is "
 "registered and / or url is correct."
-msgstr "Kon het rapportsjabloon niet vinden. Verzeker u ervan dat het rapportsjabloon geregistreerd is en/of de URL juist is."
+msgstr "Het rapportsjabloon is niet gevonden. Controleer of het sjabloon geregistreerd is en of de URL juist is."
 
 #: templates/CRM/Report/Form/Actions.tpl
 msgid "Existing report(s) from this template"
