--- a/po/pt_BR/countries.po
+++ b/po/pt_BR/countries.po
@@ -3,6 +3,7 @@
 # If you contribute heavily to a translation and deem your work copyrightable,
 # make sure you license it to CiviCRM LLC under Academic Free License 3.0.
 # Translators:
+# Diego Viegas <diego.viegas@dotpro.com.br>, 2016
 # Diego Viegas <diego.viegas@dotpro.com.br>, 2012
 # Leonardo Moraes de Oliveira <leonardoleozinho576@gmail.com>, 2015
 # Piotr Szotkowski <chastell@chastell.net>, 2011
@@ -12,8 +13,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2016-05-08 17:05-0400\n"
-"PO-Revision-Date: 2016-05-08 22:32+0000\n"
-"Last-Translator: Mathieu Lutfy <mathieu@bidon.ca>\n"
+"PO-Revision-Date: 2016-06-23 18:25+0000\n"
+"Last-Translator: Diego Viegas <diego.viegas@dotpro.com.br>\n"
 "Language-Team: Portuguese (Brazil) (http://www.transifex.com/civicrm/civicrm/language/pt_BR/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -1043,8 +1044,8 @@ msgstr "Kosovo"
 
 msgctxt "country"
 msgid "Saint Barthélemy"
-msgstr ""
+msgstr "São Bartolomeu"
 
 msgctxt "country"
 msgid "Saint Martin (French part)"
-msgstr ""
+msgstr "São Martinho (Parte Francesa)"
