po: update po/pt_BR/common-components.po (pulled from Transifex.net by CiviCRM l10n maintainer)

--- a/po/pt_BR/common-components.po
+++ b/po/pt_BR/common-components.po
@@ -14,8 +14,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2016-05-09 13:33-0400\n"
-"PO-Revision-Date: 2016-05-09 17:37+0000\n"
-"Last-Translator: Mathieu Lutfy <mathieu@bidon.ca>\n"
+"PO-Revision-Date: 2016-06-23 18:37+0000\n"
+"Last-Translator: Diego Viegas <diego.viegas@dotpro.com.br>\n"
 "Language-Team: Portuguese (Brazil) (http://www.transifex.com/civicrm/civicrm/language/pt_BR/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -217,7 +217,7 @@ msgstr "Download"
 #: CRM/Admin/Page/MessageTemplates.php ang/crmMailing/BlockMailing.html
 #: ang/crmMailingAB/BlockMailing.html
 msgid "Message Template"
-msgstr ""
+msgstr "Modelo de Mensagem"
 
 #: CRM/Admin/Page/Options.php templates/CRM/Admin/Page/APIExplorer.tpl
 #: templates/CRM/Contribute/Form/ContributionView.tpl
@@ -258,12 +258,12 @@ msgstr "Configurar"
 #: CRM/Contribute/DAO/Widget.php
 #: CRM/Contribute/Form/ContributionPage/Widget.php
 msgid "About"
-msgstr ""
+msgstr "Sobre"
 
 #: ang/crmCxn/AboutCtrl.html ang/crmCxn/ConfirmConnectCtrl.html
 #: ang/crmCxn/ConfirmReconnectCtrl.html ang/crmCaseType/edit.html
 msgid "Advanced"
-msgstr ""
+msgstr "Avançado"
 
 #: templates/CRM/Admin/Form/LocationType.tpl
 #: templates/CRM/Admin/Form/OptionGroup.tpl
@@ -322,7 +322,7 @@ msgstr "Está Ativo?"
 #: templates/CRM/Admin/Page/MessageTemplates.tpl
 #: ang/crmCaseType/activitySetDetails.html
 msgid "Workflow"
-msgstr ""
+msgstr "Fluxo de trabalho"
 
 #: templates/CRM/Admin/Page/Navigation.tpl
 #: CRM/Financial/Form/FinancialType.php
@@ -331,7 +331,7 @@ msgstr "Não é possível Excluir"
 
 #: templates/CRM/Admin/Page/Options.hlp ang/crmCaseType/edit.html
 msgid "Activity Types"
-msgstr ""
+msgstr "Tipos de Atividade"
 
 #: templates/CRM/Admin/Page/Options.tpl templates/CRM/Report/Page/Options.tpl
 msgid ""
@@ -395,7 +395,7 @@ msgstr "Nome do Lote"
 
 #: CRM/Batch/DAO/Batch.php CRM/Report/Form/Contribute/Bookkeeping.php
 msgid "Batch Title"
-msgstr ""
+msgstr "Título do Lote"
 
 #: CRM/Batch/Form/Batch.php CRM/Financial/Form/Search.php
 msgid "Number of Items"
@@ -488,7 +488,7 @@ msgstr "Título do Relatório"
 
 #: CRM/Campaign/Form/Survey/TabHeader.php ang/crmMailingAB/ListCtrl.html
 msgid "Results"
-msgstr ""
+msgstr "Resultados"
 
 #: CRM/Campaign/Form/Survey.php CRM/Contribute/Form/ContributionPage.php
 #: CRM/Event/Form/ManageEvent.php
@@ -541,7 +541,7 @@ msgstr "se estiver pesquisando numa faixa de datas ou quantias, tente uma faixa 
 #: templates/CRM/Campaign/Form/Task/Interview.tpl
 #: CRM/Contribute/Form/AdditionalPayment.php
 msgid "%1"
-msgstr ""
+msgstr "%1"
 
 #: templates/CRM/Campaign/Form/Task/Interview.tpl
 #: templates/CRM/Report/Form/Tabs/OrderBy.tpl
@@ -796,7 +796,7 @@ msgstr "Ver Pagamento"
 #: xml/templates/message_templates/membership_online_receipt_html.tpl
 #: xml/templates/message_templates/membership_online_receipt_text.tpl
 msgid "Credit Card Information"
-msgstr ""
+msgstr "Informações do Crédito Cartão"
 
 #: CRM/Contribute/Form/AdditionalPayment.php
 #: templates/CRM/Contribute/Page/Tab.hlp templates/CRM/Pledge/Page/Payment.hlp
@@ -1079,7 +1079,7 @@ msgstr "Saldo Devedor"
 #: templates/CRM/Contribute/Form/Contribution.tpl
 #: templates/CRM/Pledge/Form/Pledge.tpl
 msgid "loading"
-msgstr ""
+msgstr "carregando"
 
 #: templates/CRM/Contribute/Form/Contribution/Confirm.tpl
 #: templates/CRM/Contribute/Form/Contribution/ThankYou.tpl
@@ -1981,7 +1981,7 @@ msgstr "Selecione o tipo financeiro apropriado para este pagamento."
 #: templates/CRM/Event/Form/ManageEvent/EventInfo.hlp
 #: ang/crmMailing/BlockMailing.html ang/crmMailingAB/BlockMailing.html
 msgid "Template"
-msgstr ""
+msgstr "Modelo"
 
 #: templates/CRM/Event/Form/ManageEvent/Repeat.tpl
 #: templates/CRM/Event/Page/ManageEvent.tpl templates/CRM/PCP/Page/PCP.tpl
@@ -2122,12 +2122,12 @@ msgstr "Status de email"
 #: ang/crmMailing/EmailBodyCtrl/tokenAlert.html
 #: ang/crmMailingAB/EditCtrl/report.html CRM/Report/Form/Mailing/Detail.php
 msgid "Opt-out"
-msgstr ""
+msgstr "Opt-Out"
 
 #: ang/crmMailing/EditMailingCtrl/workflow.html
 #: templates/CRM/PCP/Form/Contribute.hlp
 msgid "Approval"
-msgstr ""
+msgstr "Aprovação"
 
 #: templates/CRM/Mailing/Page/Report.tpl CRM/Report/Form/Mailing/Clicks.php
 #: CRM/Report/Form/Mailing/Summary.php
@@ -2211,42 +2211,42 @@ msgstr "Saldo Devedor"
 #: CRM/Contribute/Form/UpdateSubscription.php
 #: templates/CRM/Pledge/Form/Search/Common.tpl
 msgid "Number of Installments"
-msgstr ""
+msgstr "Número de Vezes"
 
 #: CRM/Contribute/Form/Contribution/Main.php CRM/Event/Form/Participant.php
 #: CRM/Member/Form/Membership.php CRM/Member/Form/MembershipRenewal.php
 msgid "Payment Method is a required field."
-msgstr ""
+msgstr "Meio de Pagamento é um campo requerido."
 
 #: CRM/Contribute/Form/Contribution.php CRM/Member/Form/Membership.php
 msgid "You do not have all the permissions needed for this page."
-msgstr ""
+msgstr "Você não tem todas as permissões necessárias para esta página."
 
 #: CRM/Contribute/Form/Task/PickProfile.php
 #: CRM/Member/Form/Task/PickProfile.php
 msgid "Update multiple records error"
-msgstr ""
+msgstr "Erro ao Atualizar Múltiplos Registros"
 
 #: templates/CRM/Contribute/Form/Contribution/Confirm.tpl
 #: templates/CRM/Contribute/Form/Contribution/ThankYou.tpl
 #: CRM/Report/Form/Contribute/Recur.php
 msgid "Installment Amount"
-msgstr ""
+msgstr "Valor das Parcelas"
 
 #: templates/CRM/Contribute/Form/ContributionPage/PCP.hlp
 #: CRM/PCP/DAO/PCPBlock.php
 msgid "Notification Email"
-msgstr ""
+msgstr "Email de Notificação"
 
 #: templates/CRM/Contribute/Page/ContributionTotals.tpl
 #: CRM/Report/Form/Contribute/Summary.php
 msgid "Median"
-msgstr ""
+msgstr "Mediana"
 
 #: templates/CRM/Contribute/Page/ContributionTotals.tpl
 #: CRM/Report/Form/Contribute/Summary.php
 msgid "Mode"
-msgstr ""
+msgstr "Modo"
 
 #: CRM/Event/Form/ManageEvent/TabHeader.php CRM/Event/Page/ManageEvent.php
 #: templates/CRM/Event/Form/ManageEvent/Tab.hlp
@@ -2254,24 +2254,24 @@ msgstr ""
 #: templates/CRM/Event/Form/ParticipantView.tpl
 #: CRM/Report/Form/Contribute/Detail.php
 msgid "Fees"
-msgstr ""
+msgstr "Taxas"
 
 #: CRM/Event/Form/SelfSvcUpdate.php CRM/Report/Form/Case/Demographics.php
 msgid "-select-"
-msgstr ""
+msgstr "-selecione-"
 
 #: CRM/Mailing/DAO/Mailing.php CRM/Report/Form/Mailing/Summary.php
 msgid "Mailing ID"
-msgstr ""
+msgstr "ID do Mailing"
 
 #: CRM/Mailing/Selector/Browse.php CRM/Report/Form/Contribute/RecurSummary.php
 msgid "Started"
-msgstr ""
+msgstr "Iniciado"
 
 #: templates/CRM/Mailing/Page/Report.tpl CRM/Report/Form/Mailing/Summary.php
 msgid "Unique Opens"
-msgstr ""
+msgstr "Aberturas Únicas"
 
 #: templates/CRM/Mailing/Page/Report.tpl CRM/Report/Form/Mailing/Summary.php
 msgid "Total Opens"
-msgstr ""
+msgstr "Aberturas Totais"
