po: update po/nl_NL/install.po (pulled from Transifex.net by CiviCRM l10n maintainer)

--- a/po/nl_NL/install.po
+++ b/po/nl_NL/install.po
@@ -10,7 +10,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2016-05-09 13:33-0400\n"
-"PO-Revision-Date: 2016-06-13 14:11+0000\n"
+"PO-Revision-Date: 2016-06-23 18:15+0000\n"
 "Last-Translator: HanV <han.velthuis@home.nl>\n"
 "Language-Team: Dutch (http://www.transifex.com/civicrm/civicrm/language/nl/)\n"
 "MIME-Version: 1.0\n"
@@ -321,7 +321,7 @@ msgstr "Kan de geïnstalleerde versie van MySQL niet bepalen. Verzeker u er a.u.
 
 #: install/index.php
 msgid "Could not determine if MySQL has InnoDB support. Assuming no."
-msgstr "Kon niet bepalen of MySQL InnoDB ondersteunt. Neem aan van niet."
+msgstr "Er kan niet worden bepaald of MySQL InnoDB ondersteunt. Aanname: het wordt niet ondersteunt."
 
 #: install/index.php
 msgid "MySQL server does have InnoDB support"
@@ -329,31 +329,31 @@ msgstr "MySQL-server ondersteunt InnoDB"
 
 #: install/index.php
 msgid "Could not determine if MySQL has InnoDB support. Assuming no"
-msgstr "Kon niet bepalen of MySQL InnoDB ondersteunt. Neem aan van niet"
+msgstr "Er kan niet worden bepaald of MySQL InnoDB ondersteunt. Aanname: het wordt niet ondersteunt."
 
 #: install/index.php
 msgid "Could not login to the database."
-msgstr "Kon niet inloggen op de database."
+msgstr "Inloggen op de database is mislukt."
 
 #: install/index.php
 msgid "Could not select the database."
-msgstr "Kon de database niet selecteren."
+msgstr "Het selecteren van de database is mislukt."
 
 #: install/index.php
 msgid "Could not create a temp table."
-msgstr "Kon geen tijdelijke tabel maken."
+msgstr "Aanmaken tijdelijke tabel is mislukt."
 
 #: install/index.php
 msgid "Could not create a table in the database."
-msgstr "Kon geen tabel maken in de database."
+msgstr "Aanmaken databasetabel is mislukt."
 
 #: install/index.php
 msgid "Could not create a database trigger."
-msgstr "Kon geen trigger maken in de database."
+msgstr "Er kan geen trigger in de database worden gemaakt."
 
 #: install/index.php
 msgid "Could not connect to the database server."
-msgstr "Kon geen verbinding maken met de databaseserver."
+msgstr "Er kan geen verbinding worden gemaakt met de databaseserver."
 
 #: install/index.php
 msgid "Could not obtain a write lock for the database table."
@@ -361,11 +361,11 @@ msgstr "Het locken van de databasetabel is mislukt."
 
 #: install/index.php
 msgid "Could not release the lock for the database table."
-msgstr "Kon de vergrendeling van de databasetabel niet vrijgeven."
+msgstr "De lock op de databasetabel kan niet worden vrijgeven."
 
 #: install/index.php
 msgid "Could not query database server variables."
-msgstr "Kon de databaseservervariabelen niet bevragen."
+msgstr "Het raadplegen van de variabelen van de databaseserver is mislukt."
 
 #: install/index.php
 msgid "MySQL server auto_increment_increment is 1"
@@ -373,7 +373,7 @@ msgstr "MySQL-server auto_increment_increment is 1"
 
 #: install/index.php
 msgid "Could not get information about the thread_stack of the database."
-msgstr "Kon geen informatie krijgen over de thread_stack van de database."
+msgstr "De informatie over de thread_stack van de database kan niet worden opgevraagd."
 
 #: install/index.php
 msgid "MySQL \"thread_stack\" is %1 kb"
@@ -397,7 +397,7 @@ msgstr "de volgende PHP-variabelen ontbreken: %1"
 
 #: install/index.php
 msgid "Oops! Could not create database %1"
-msgstr "Oeps! Kon database %1 niet maken"
+msgstr "Oeps! De database %1 is niet aangemaakt"
 
 #: install/index.php
 msgid ""
