po: update po/nl_NL/member.po (pulled from Transifex.net by CiviCRM l10n maintainer)

--- a/po/nl_NL/member.po
+++ b/po/nl_NL/member.po
@@ -14,7 +14,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2016-05-09 13:33-0400\n"
-"PO-Revision-Date: 2016-06-15 14:18+0000\n"
+"PO-Revision-Date: 2016-06-23 19:08+0000\n"
 "Last-Translator: HanV <han.velthuis@home.nl>\n"
 "Language-Team: Dutch (http://www.transifex.com/civicrm/civicrm/language/nl/)\n"
 "MIME-Version: 1.0\n"
@@ -69,7 +69,7 @@ msgstr "Het lijkt erop dat er geen geldige lidmaatschapsstatus is die correspond
 
 #: CRM/Member/BAO/Membership.php
 msgid "Could not find a system table"
-msgstr "Kon een systeemtabel niet vinden"
+msgstr "Een systeemtabel is niet gevonden"
 
 #: CRM/Member/BAO/Membership.php
 msgid "Online Contribution:"
@@ -413,7 +413,7 @@ msgstr "Selecteer a.u.b. een lidmaatschapstype."
 
 #: CRM/Member/Form/Membership.php
 msgid "Please enter an integer for the number of terms."
-msgstr "Vul a.u.b. een geheel getal in voor het aantal items."
+msgstr "Vul een geheel getal in voor het aantal termijnen."
 
 #: CRM/Member/Form/Membership.php
 msgid "Select at least one membership option."
@@ -1803,7 +1803,7 @@ msgid ""
 "'External ID' for each new contact which you can then use to match "
 "memberships to contacts. Then return to this screen and import the "
 "membership records."
-msgstr "Voor het importeren van lidmaatschappen is het noodzakelijk dat de personen, huishoudens en organisaties zelf al als contact bekend te zijn in uw CiviCRM database. Als u lidmaatschappen moet importeren voor contacten die nog niet aan CiviCRM toegevoegd zijn, dan gaat dit in twee stappen. Gebruik eerst <strong>Contacten importeren</strong> om de contacten toe te voegen. Voeg, indien mogelijk, een uniek 'Extern nummer' toe aan elk nieuw contact. Dat kunt u vervolgens gebruiken om lidmaatschappen aan contacten te koppelen. Keer vervolgens terug naar dit scherm en importeer de lidmaatschapsrecords."
+msgstr "Voor het importeren van lidmaatschappen is het noodzakelijk dat de personen, huishoudens en organisaties zelf al als contact bekend te zijn in uw CiviCRM database. Als u lidmaatschappen moet importeren voor contacten die nog niet aan CiviCRM toegevoegd zijn, dan gaat dit in twee stappen. Gebruik eerst <strong>Contacten importeren</strong> om de contacten toe te voegen. Voeg, indien mogelijk, een uniek 'Externe-ID' toe aan elk nieuw contact. Dat kunt u vervolgens gebruiken om lidmaatschappen aan contacten te koppelen. Keer vervolgens terug naar dit scherm en importeer de lidmaatschapsrecords."
 
 #: templates/CRM/Member/Import/Form/DataSource.hlp
 msgid "Matching Memberships to Contacts"
@@ -1822,7 +1822,7 @@ msgid ""
 "contact in CiviCRM, you can include that value as a column in your import "
 "file. Memberships will then be matched to contact records using their "
 "External ID."
-msgstr "Als u een uniek <strong>extern nummer</strong> heeft opgeslagen voor elk contact in CiviCRM, dan kunt u deze waarde opnemen als kolom in uw importbestand. Lidmaatschappen worden dan op grond van hun extern nummer gekoppeld aan contactrecords."
+msgstr "Als u een uniek <strong>Externe-ID</strong> heeft opgeslagen voor elk contact in CiviCRM, dan kunt u deze waarde opnemen als kolom in uw importbestand. Lidmaatschappen worden dan op grond van hun externe-ID gekoppeld aan contactrecords."
 
 #: templates/CRM/Member/Import/Form/DataSource.hlp
 msgid ""
@@ -1846,7 +1846,7 @@ msgid ""
 "Identifier' (if you are using those in your contact records), OR the "
 "property defined in your Unsupervised Duplicate Matching rule (which is "
 "Email Address by default)."
-msgstr "Als u lidmaatschappen toevoegt moet er een kolom zijn in de invoer met een waarde die aangeeft bij welk contact het lidmaatschap behoort. U kunt kiezen uit het 'Intern contactnummer', een 'Extern nummer' (als u die gebruikt bij uw contacten) of de velden in uw zonder toezicht overeenkomstregel (standaard: e-mailadres)."
+msgstr "Als u lidmaatschappen toevoegt moet er een kolom zijn in de invoer met een waarde die aangeeft bij welk contact het lidmaatschap behoort. U kunt kiezen uit het 'Intern contactnummer', een 'Externe-ID' (als u die gebruikt bij uw contacten) of de velden in uw zonder toezicht overeenkomstregel (standaard: e-mailadres)."
 
 #: templates/CRM/Member/Import/Form/DataSource.hlp
 msgid ""
