--- a/po/nl_NL/mailing.po
+++ b/po/nl_NL/mailing.po
@@ -15,7 +15,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2016-05-09 13:33-0400\n"
-"PO-Revision-Date: 2016-06-13 14:45+0000\n"
+"PO-Revision-Date: 2016-06-23 18:18+0000\n"
 "Last-Translator: HanV <han.velthuis@home.nl>\n"
 "Language-Team: Dutch (http://www.transifex.com/civicrm/civicrm/language/nl/)\n"
 "MIME-Version: 1.0\n"
@@ -484,7 +484,7 @@ msgid ""
 "We had a problem processing your subscription request for %1. You have tried"
 " to subscribe to a private group and/or we encountered a database error. "
 "Please contact the site administrator."
-msgstr "Uw aanmeldingsverzoek voor %1 kon niet worden verwerkt. U heeft zich proberen aan te melden voor een private groep en/of er is een probleem met de database. Neem contact op met de beheerder."
+msgstr "Uw aanmeldingsverzoek voor %1 is niet verwerkt. U heeft zich proberen aan te melden voor een private groep en/of er is een probleem met de database. Neem contact op met de beheerder."
 
 #: CRM/Mailing/Event/DAO/Bounce.php CRM/Mailing/Event/DAO/Delivered.php
 #: CRM/Mailing/Event/DAO/Forward.php CRM/Mailing/Event/DAO/Opened.php
