--- a/po/nl_NL/financial.po
+++ b/po/nl_NL/financial.po
@@ -9,7 +9,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2016-05-09 13:33-0400\n"
-"PO-Revision-Date: 2016-06-14 16:07+0000\n"
+"PO-Revision-Date: 2016-06-23 18:04+0000\n"
 "Last-Translator: HanV <han.velthuis@home.nl>\n"
 "Language-Team: Dutch (http://www.transifex.com/civicrm/civicrm/language/nl/)\n"
 "MIME-Version: 1.0\n"
@@ -86,7 +86,7 @@ msgstr "Ongeldige waarde doorgegeven aan de getPayment functie"
 
 #: CRM/Financial/BAO/PaymentProcessor.php
 msgid "Could not retrieve payment processor details"
-msgstr "De details van de betaalmethode konden niet worden opgehaald"
+msgstr "De details van de betaalmethode kunnen niet worden opgehaald"
 
 #: CRM/Financial/BAO/PaymentProcessorType.php
 msgid ""
