po: update po/nl_NL/extension.po (pulled from Transifex.net by CiviCRM l10n maintainer)

--- a/po/nl_NL/extension.po
+++ b/po/nl_NL/extension.po
@@ -12,8 +12,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2016-05-09 13:33-0400\n"
-"PO-Revision-Date: 2016-05-19 09:53+0000\n"
-"Last-Translator: Kevin Levie <kevin@levity.nl>\n"
+"PO-Revision-Date: 2016-06-23 18:06+0000\n"
+"Last-Translator: HanV <han.velthuis@home.nl>\n"
 "Language-Team: Dutch (http://www.transifex.com/civicrm/civicrm/language/nl/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -136,7 +136,7 @@ msgstr "Niet mogelijk de extensie uit te pakken"
 
 #: CRM/Extension/Downloader.php
 msgid "Failed reading data from %1 during installation"
-msgstr "Kon tijdens de installatie geen gegevens lezen van %1"
+msgstr "Tijdens de installatie konden geen gegevens worden gelezen van %1"
 
 #: CRM/Extension/Manager/Payment.php
 msgid "Failed to load file (%3) for payment processor (%1) while running \"%2\""
@@ -167,4 +167,4 @@ msgid ""
 "The CiviCRM public extensions directory at %1 could not be contacted - "
 "please check your webserver can make external HTTP requests or contact "
 "CiviCRM team on <a href=\"http://forum.civicrm.org/\">CiviCRM forum</a>."
-msgstr "Er kon geen contact gemaakt worden met het openbare extensie-overzicht van CiviCRM op %1. Controleer of uw webserver externe HTTP-verzoeken kan doen, of neem eventueel contact op met het CiviCRM-team op het <a href=\"http://forum.civicrm.org/\">CiviCRM forum</a>.<br />"
+msgstr "Er kan geen contact worden gemaakt met het openbare extensie-overzicht van CiviCRM op %1. Controleer of uw webserver externe HTTP-verzoeken kan doen, of neem contact op met het CiviCRM-team op het <a href=\"http://forum.civicrm.org/\">CiviCRM forum</a>.<br />"
